--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -2,7 +2,6 @@
 	Logged in as <strong><%= current_user.email %></strong>
 <% end %>
 
-
 <!-- Overlay -->
 <div id="section-home" class="home-section-wrap center">
 	<div class="section-overlay"></div>
@@ -14,7 +13,7 @@
 	<!-- header -->
 	<header class="header-site">
 		<div class="logo-site animated bounceInDown" data-animation-delay="700">
-			<h1> Meya Currency Predictor </h1>
+			<h1> <%= current_user.username.capitalize %> Calculations </h1>
 		</div>
 	</header>
 	<!-- /header -->
@@ -36,39 +35,18 @@
 
 									<!-- content slide -->
 									<div class="content-slide">
-									<!-- Subscribe Form -->
+
+										<!-- Subscribe Form -->
 										<div class="form animated bounceInUp" data-animation-delay="700">
 											<!-- container form -->
 											<div class="container-form">
 												<!-- section page -->
-												<div class="section-page" id="signup">
-													<% unless user_signed_in? %>
-														<form class="sign-up-sign-in-form" method="post" id="mc-form">
-															<a href="<%= new_user_registration_path %>"><button type="submit" id="" class="border-button no-bottom-margin">Register</button></a>
-															<a href="<%= new_user_session_path %>"><button type="submit" id="" class="border-button no-bottom-margin">Sign In</button></a>
-														</form>
-													<% else %>
-														<form class="sign-up-sign-in-form" method="post" id="mc-form">
-															<a href="/new"><button type="submit" id="" class="border-button no-bottom-margin">Get Started</button></a>
-														</form>
-													<% end %>
-												</div>
+
 												<!-- /section page -->
 											</div>
 											<!-- /container form -->
 										</div>
 										<!-- /Subscribe Form -->
-
-										<!-- socials icons -->
-										<nav class="socials-icons animated bounceInUp" data-animation-delay="700">
-											<ul>
-												<li><a href="https://www.facebook.com/kenigbolo.meyastephen"><i class="ion-social-facebook"></i></a></li>
-												<li><a href="http://www.twitter.com/expensivestevie"><i class="ion-social-twitter"></i></a></li>
-												<li><a href="https://plus.google.com/u/0/104900543322717492050"><i class="ion-social-googleplus"></i></a></li>
-												<li><a href="http://ee.linkedin.com/in/kenigbolo"><i class="ion-social-linkedin"></i></a></li>
-											</ul>
-										</nav>
-										<!-- /socials icons -->
 
 									</div><!-- /content slide -->
 									</div>
