Finalize logic for increase or decrease algorithm and implement necessary changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,7 +49,7 @@
 														</form>
 													<% else %>
 														<form class="sign-up-sign-in-form" method="post" id="mc-form">
-															<a href="/new"><button type="submit" id="" class="border-button no-bottom-margin">Get Started</button></a>
+															<a href="/calculations"><button type="submit" id="" class="border-button no-bottom-margin">Get Started</button></a>
 														</form>
 													<% end %>
 												</div>
