--- a/app/views/calculations/show.html.erb
+++ b/app/views/calculations/show.html.erb
@@ -26,12 +26,8 @@
 
   									<!-- content slide -->
   									<div class="content-slide">
-  										<!-- Clock Countdown -->
-  										<!-- <div id="clock-countdown" class="animated bounceInDown" data-animation-delay="700"></div> -->
-  										<h3 class="color-white top-margin animated bounceInDown" data-animation-delay="700" >We provide you the best currency exchange prediction service</h3>
-                      <br>
-                      <h4 class="color-white top-margin animated bounceInDown" data-animation-delay="700" ><strong><%= @calculation.num_of_days%> Day(s) Conversion for
-                        <%= @calculation.amount %> | <%=@calculation.base_currency%> to <%= @calculation.conversion_currency %></strong></h4>
+                      <h4 class="color-white top-margin animated bounceInDown" data-animation-delay="700" ><strong><%= @calculation.num_of_days%> Week(s) Conversion for
+                        <%= @calculation.amount %> <%=@calculation.base_currency%> to <%= @calculation.conversion_currency %></strong></h4>
 
   										<!-- Subscribe Form -->
   										<div class="form animated bounceInUp" data-animation-delay="700">
@@ -45,12 +41,50 @@
   															<a href="<%= new_user_session_path %>"><button type="submit" id="" class="border-button no-bottom-margin">Sign In</button></a>
   														</form>
   													<% else %>
-                              <%= pie_chart({"Football" => 10, "Basketball" => 5}) %>
+                              <%= area_chart @result.value %>
+                              <!-- Button trigger modal -->
+                              <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#summary-table">
+                                View Full Prediction Table
+                              </button>
   													<% end %>
   												</div>
   												<!-- /section page -->
   											</div>
   											<!-- /container form -->
+                        <table class="table table-sm table-bordered">
+                          <thead>
+                            <tr>
+                              <th>Rank</th>
+                              <th>Year/Week</th>
+                              <th>Exchange Rate</th>
+                              <th>Total Amount</th>
+                              <th>Profit/Loss</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <th scope="row">1</th>
+                              <th scope="row"></th>
+                              <th scope="row"></th>
+                              <th scope="row"></th>
+                              <th scope="row"></th>
+                            </tr>
+                            <tr>
+                              <th scope="row">2</th>
+                              <th scope="row"></th>
+                              <th scope="row"></th>
+                              <th scope="row"></th>
+                              <th scope="row"></th>
+                            </tr>
+                            <tr>
+                              <th scope="row">3</th>
+                              <th scope="row"></th>
+                              <th scope="row"></th>
+                              <th scope="row"></th>
+                              <th scope="row"></th>
+                            </tr>
+                          </tbody>
+                        </table>
   										</div>
   										<!-- /Subscribe Form -->
 
@@ -72,4 +106,23 @@
   	<!-- /section -->
   </div>
   <!-- /main -->
+</div>
+<!-- Modal -->
+<div class="modal fade" id="summary-table" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
