--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,3 +37,11 @@
  	bottom:0;
  	left:0;
  }
+.btn-primary-form {
+  width: 25%;
+}
+
+.btn-result-form {
+  width: 25%;
+  background-color: black !important;
+}
