Refactor algorithm to improve results performance and prediction

--- a/app/views/calculations/_calculation_form.html.erb
+++ b/app/views/calculations/_calculation_form.html.erb
@@ -24,7 +24,7 @@
 
     <!--  Number of Days -->
      <div class="form-group">
-      <label class="btn btn-primary">Days</label>
+      <label class="btn btn-primary">Waiting Time (weeks)</label>
         <%= f.number_field :num_of_days, in: 1..250, class: "form-control btn" %>
     </div>
     <!--  !Number of Days -->
