--- a/app/views/home/_calculation_form.html.erb
+++ b/app/views/home/_calculation_form.html.erb
@@ -31,7 +31,7 @@
 
     <!--  Submit -->
     <div class="form-group">
-       <%= f.submit "Calculate", class: "btn btn-primary"%>
+       <%= f.submit "Calculate", class: "btn btn-primary", id: 'calculate', disabled: true%>
     </div>
     <!--  !Submit -->
   <% end %>
