--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,41 +4,43 @@
     <title>CurrencyCoverter</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <!-- CSS Global Compulsory -->
-    <%= stylesheet_link_tag    'bootstrap.min.css'%>
-    <%= stylesheet_link_tag    'style.css'%>
+    <% unless Rails.env.test? %>
+      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+      <!-- CSS Global Compulsory -->
+      <%= stylesheet_link_tag    'bootstrap.min.css'%>
+      <%= stylesheet_link_tag    'style.css'%>
 
-    <!-- CSS Implementing Plugins -->
-    <%= stylesheet_link_tag    'font-awesome.min.css'%>
-    <%= stylesheet_link_tag    'ionicons.min.css'%>
-    <%= stylesheet_link_tag    'animate.min.css'%>
-    <%= stylesheet_link_tag    'flexslider.css'%>
-    <%= stylesheet_link_tag    'owl.carousel.css'%>
-    <%= stylesheet_link_tag    'owl.theme.css'%>
-    <%= stylesheet_link_tag    'vegas.min.css'%>
-    <%= stylesheet_link_tag    'menu.css'%>
-    <%= stylesheet_link_tag    'sidebar.css'%>
+      <!-- CSS Implementing Plugins -->
+      <%= stylesheet_link_tag    'font-awesome.min.css'%>
+      <%= stylesheet_link_tag    'ionicons.min.css'%>
+      <%= stylesheet_link_tag    'animate.min.css'%>
+      <%= stylesheet_link_tag    'flexslider.css'%>
+      <%= stylesheet_link_tag    'owl.carousel.css'%>
+      <%= stylesheet_link_tag    'owl.theme.css'%>
+      <%= stylesheet_link_tag    'vegas.min.css'%>
+      <%= stylesheet_link_tag    'menu.css'%>
+      <%= stylesheet_link_tag    'sidebar.css'%>
 
-    <!-- Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900' rel='stylesheet' type='text/css'>
+      <!-- Fonts -->
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900' rel='stylesheet' type='text/css'>
 
 
-    <!-- JS -->
-    <%= javascript_include_tag 'modernizr.js' %>
-    <%= javascript_include_tag 'snap.svg-min.js' %>
+      <!-- JS -->
+      <%= javascript_include_tag 'modernizr.js' %>
+      <%= javascript_include_tag 'snap.svg-min.js' %>
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <script src="http://webnextbd.net/demo/js/respond.min.js"></script>
-    <![endif]-->
+      <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+      <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="http://webnextbd.net/demo/js/respond.min.js"></script>
+      <![endif]-->
 
-    <!--[if lt IE 11]>
-    <link rel="stylesheet" type="text/css" href="http://webnextbd.net/demo/css/ie.css">
-    <![endif]-->
+      <!--[if lt IE 11]>
+      <link rel="stylesheet" type="text/css" href="http://webnextbd.net/demo/css/ie.css">
+      <![endif]-->
+    <% end %>
   </head>
 
   <body class="image-background">
@@ -88,23 +90,25 @@
     </div>
     <!--  /wrapper -->
     <!-- JS -->
-    <%= javascript_include_tag 'jquery-1.11.3.min.js' %>
-    <%= javascript_include_tag 'bootstrap.min.js' %>
-    <%= javascript_include_tag 'retina.min.js' %>
-    <%= javascript_include_tag 'jquery.backstretch.min.js' %>
-    <%= javascript_include_tag 'jquery.countdown.min.js' %>
-    <%= javascript_include_tag 'jquery.parallaxify.min.js' %>
-    <%= javascript_include_tag 'jquery.particleground.min.js' %>
-    <%= javascript_include_tag 'vegas.min.js' %>
-    <%= javascript_include_tag 'trianglify.min.js' %>
-    <%= javascript_include_tag 'jquery.mb.YTPlayer.js' %>
-    <%= javascript_include_tag 'jquery.nicescroll.min.js' %>
-    <%= javascript_include_tag 'jquery.flexslider-min.js' %>
-    <%= javascript_include_tag 'owl.carousel.min.js' %>
-    <%= javascript_include_tag 'jquery.appear.js' %>
-    <%= javascript_include_tag 'classie.js' %>
-    <%= javascript_include_tag 'sidebar.js' %>
-    <%= javascript_include_tag 'main.js' %>
+    <% unless Rails.env.test? %>
+      <%= javascript_include_tag 'jquery-1.11.3.min.js' %>
+      <%= javascript_include_tag 'bootstrap.min.js' %>
+      <%= javascript_include_tag 'retina.min.js' %>
+      <%= javascript_include_tag 'jquery.backstretch.min.js' %>
+      <%= javascript_include_tag 'jquery.countdown.min.js' %>
+      <%= javascript_include_tag 'jquery.parallaxify.min.js' %>
+      <%= javascript_include_tag 'jquery.particleground.min.js' %>
+      <%= javascript_include_tag 'vegas.min.js' %>
+      <%= javascript_include_tag 'trianglify.min.js' %>
+      <%= javascript_include_tag 'jquery.mb.YTPlayer.js' %>
+      <%= javascript_include_tag 'jquery.nicescroll.min.js' %>
+      <%= javascript_include_tag 'jquery.flexslider-min.js' %>
+      <%= javascript_include_tag 'owl.carousel.min.js' %>
+      <%= javascript_include_tag 'jquery.appear.js' %>
+      <%= javascript_include_tag 'classie.js' %>
+      <%= javascript_include_tag 'sidebar.js' %>
+      <%= javascript_include_tag 'main.js' %>
+    <% end %>
     <!-- /JS -->
   </body>
 </html>
