--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
             <li><a href="<%= calculations_path %>"><i class="fa fa-fw fa-users"></i><span>History</span></a></li>
             <% if user_signed_in? %>
             <li><a href="<%= edit_user_registration_path %>"><i class="fa fa-fw fa-info"></i><span>Profile</span></a></li>
-            <li><%= link_to ('Logout', destroy_user_session_path, :method => :delete, class: "fa fa-fw fa-sign-out")%></li>
+            <li><%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "fa fa-fw fa-sign-out"%></li>
             <li><a href="<%= destroy_user_session_path %>" data-method="delete" id="logout"><i class="fa fa-fw fa-sign-out"></i><span>Logout</span></a></li>
             <% end %>
           </ul>
