--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,10 @@
     <%= csrf_meta_tags %>
 
     <% unless Rails.env.test? %>
-      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_include_tag 'jquery-1.11.3.min.js' %>
       <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
       <!-- CSS Global Compulsory -->
+      <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
       <%= stylesheet_link_tag    'bootstrap.min.css'%>
       <%= stylesheet_link_tag    'style.css'%>
 
