--- a/app/views/calculations/show.html.erb
+++ b/app/views/calculations/show.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
 <div class="section-overlay-modify">
   <!-- main -->
   <div class="main">
