include font-awesome

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
       <!-- Fonts -->
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900' rel='stylesheet' type='text/css'>
-
+      <script src="https://use.fontawesome.com/215857bd31.js"></script>
 
       <!-- JS -->
       <%= javascript_include_tag 'modernizr.js' %>
