Finalize app views

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1076,7 +1076,6 @@ input:-moz-placeholder { text-overflow: ellipsis; }
 
 
 .section-overlay {
-	position: fixed;
 	width: 100%;
 	height: 100%;
 	top: 0;
@@ -1547,6 +1546,7 @@ body.mobile .animated {
 	transition: all .3s ease-in-out;
 	background: linear-gradient(11deg, #3ed9b1, #2a8a8a, #36dcdd, #3692dd);
 	background-size: 800% 800%;
+	overflow: scroll !important;
 
 	-webkit-animation: AnimationName 30s ease infinite;
 	-moz-animation: AnimationName 30s ease infinite;
