--- a/app/views/calculations/show.html.erb
+++ b/app/views/calculations/show.html.erb
@@ -1,5 +1,5 @@
 <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
-<div class="section-overlay-modify">
+<div class="section-overlay">
   <!-- main -->
   <div class="main">
 
