--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,20 +4,23 @@
     <title>CurrencyCoverter</title>
     <%= csrf_meta_tags %>
 
+    <!-- META DATA -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
+
     <% unless Rails.env.test? %>
-      <%= javascript_include_tag 'jquery-1.11.3.min.js' %>
-      <%= javascript_include_tag 'jquery.backstretch.min.js' %>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
-      <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
-      <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
       <!-- CSS Global Compulsory -->
       <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-      <%= stylesheet_link_tag    'bootstrap.min.css'%>
+      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
       <%= stylesheet_link_tag    'style.css'%>
 
+
       <!-- CSS Implementing Plugins -->
-      <%= stylesheet_link_tag    'font-awesome.min.css'%>
-      <%= stylesheet_link_tag    'ionicons.min.css'%>
+      <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+      <link href='http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css' rel='stylesheet' type='text/css'>
       <%= stylesheet_link_tag    'animate.min.css'%>
       <%= stylesheet_link_tag    'flexslider.css'%>
       <%= stylesheet_link_tag    'owl.carousel.css'%>
@@ -29,8 +32,6 @@
       <!-- Fonts -->
       <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,400,300,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900' rel='stylesheet' type='text/css'>
-      <link href='http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css' rel='stylesheet' type='text/css'>
-      <script src="https://use.fontawesome.com/215857bd31.js"></script>
 
 
       <!-- JS -->
@@ -97,8 +98,10 @@
     <!--  /wrapper -->
     <!-- JS -->
     <% unless Rails.env.test? %>
+      <%= javascript_include_tag 'jquery-1.11.3.min.js' %>
       <%= javascript_include_tag 'bootstrap.min.js' %>
       <%= javascript_include_tag 'retina.min.js' %>
+      <%= javascript_include_tag 'jquery.backstretch.min.js' %>
       <%= javascript_include_tag 'jquery.countdown.min.js' %>
       <%= javascript_include_tag 'jquery.parallaxify.min.js' %>
       <%= javascript_include_tag 'jquery.particleground.min.js' %>
