Finalize first round of specs

--- a/app/views/calculations/show.html.erb
+++ b/app/views/calculations/show.html.erb
@@ -1,8 +1,14 @@
 <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
+<!-- header -->
+<header class="header-site">
+  <div class="logo-site animated bounceInDown" data-animation-delay="700">
+    <h1> Meya Currency Predictor </h1>
+  </div>
+</header>
+<!-- /header -->
 <div class="section-overlay">
   <!-- main -->
   <div class="main">
-
 
   	<!-- section -->
   	<section class="section fullscreen site-main">
